Fix broken JS chunk loading from Layout issue on 404 page - BD

--- a/src/components/Footer/styles.scss
+++ b/src/components/Footer/styles.scss
@@ -41,3 +41,9 @@
   color: white;
   margin-left: 10px;
 }
+
+.notfound--grid {
+  height: 100vh;
+  background-color: rgb(47, 47, 47);
+  padding: 50px;
+}
